# spark_airflow

./: airflow-webserver.pid  airflow.cfg  airflow.db  pyproject.toml  pyspark_movie.py  standalone_admin_password.txt
pyspark/: agg_movie.py  movie_join_df.py  movie_sum_df.py  repartition.py  simple.py
src/dags/: pyproject.toml  pyspark_movie.py
src/spark_airflow/: repartition.py
