[project]
name = "dags"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "baechu805", email = "bjoo606@naver.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
