[project]
name = "dags"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "baechu805", email = "bjoo606@naver.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "pyspark>=3.5.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
